# deep-learning

./: .gitignore
grokking-deep-learning/: 3_neural_network_multiple_inputs.py  3_neural_network_multiple_inputs_and_outputs.py  3_neural_network_multiple_inputs_numpy.py  3_neural_network_multiple_layers.py  3_neural_network_multiple_outputs.py  3_numpy.py  3_simple_neural_network.py  3_simple_neural_network.rs  4_cold_hot_method.py  4_mean_squared_error.py  4_simple_gradient_descent.py  4_simple_gradient_descent2.py  5_gradient_descent_multiple_inputs_and_outputs.py  5_gradient_descent_multiple_intputs.py  5_gradient_descent_multiple_outputs.py  6_backpropagation.py  6_street_lights.py  6_street_lights_2.py  README.md  Untitled.ipynb  rustrun.sh
grokking-deep-learning/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
grokking-deep-learning/3_neural_network_multiple_inputs/: Cargo.toml
grokking-deep-learning/3_neural_network_multiple_inputs/src/: main.rs
grokking-deep-learning/3_neural_network_multiple_inputs_and_outputs/: Cargo.toml
grokking-deep-learning/3_neural_network_multiple_inputs_and_outputs/src/: main.rs
grokking-deep-learning/3_neural_network_multiple_outputs/: Cargo.toml
grokking-deep-learning/3_neural_network_multiple_outputs/src/: main.rs
grokking-deep-learning/neural_network_multiple_inputs/src/: main.rs
